<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DSAndroid</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="action_settings">Settings</string>
    <string name="prefs_nodes_category">Nodes</string>
    <string name="prefs_control_category">Control</string>
    <string name="prefs_start_on_boot">Start on Boot</string>
    <string name="settings_label">DSAndroid Settings</string>
    <string name="prefs_stop_low_memory">Stop Link to Free Memory</string>
    <string name="prefs_stop_low_memory_summary">When Android starts to run out of memory, the link can be stopped to ensure system stability.</string>
    <string name="android_wear">Android Wear</string>
    <string name="prefs_start_on_boot_summary">Starts the Link when the device boots.</string>
    <string name="prefs_android_wear_summary">Enables Android Wear Integration.</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="hello_world">Hello World!</string>
    <string name="about">DSAndroid is a DSLink for Android Devices</string>
    <string name="prefs_broker_category">Broker</string>
    <string name="prefs_broker_url">Broker URL</string>
    <string name="prefs_broker_url_summary">The Broker\'s URL</string>
    <string name="error_broker_url_not_specified">Broker URL was not specified. Please input a valid Broker URL in the settings.</string>
    <string name="prefs_link_category">Link</string>
    <string name="prefs_link_name">Link Name</string>
    <string name="prefs_link_name_summary">Name of the Link</string>
    <string name="advanced_pref_category">Advanced</string>
    <string name="location_update_type">Location Update Type</string>
    <string name="read_speech">Speech Reader</string>
    <string name="take_picture">Take Picture</string>
    <string name="camera_error">Camera Error</string>
    <string name="accessibility_label">DSAndroid</string>
    <string name="accessibility_service_desc">DSAndroid Accessibility Service</string>
    <string name="notification_listener_service">Notification Listener</string>
    <string name="barcode_scanner">Barcode Scanner</string>
</resources>
