<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:id="@+id/prefs" xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/prefs_link_category">

        <EditTextPreference
            android:title="@string/prefs_link_name"
            android:defaultValue="Android"
            android:key="link.name"
            android:summary="@string/prefs_link_name_summary"/>

        <EditTextPreference
            android:title="@string/prefs_broker_url"
            android:defaultValue=""
            android:key="broker.url"
            android:summary="@string/prefs_broker_url_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_control_category">
        <CheckBoxPreference
            android:title="@string/prefs_start_on_boot"
            android:defaultValue="false"
            android:key="start.on.boot"
            android:summary="@string/prefs_start_on_boot_summary"/>

        <CheckBoxPreference
            android:title="@string/prefs_stop_low_memory"
            android:defaultValue="false"
            android:key="stop.on.low.memory"
            android:summary="@string/prefs_stop_low_memory_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Features">
        <CheckBoxPreference
            android:title="@string/android_wear"
            android:defaultValue="false"
            android:key="feature.wear"
            android:summary="@string/prefs_android_wear_summary"/>

        <CheckBoxPreference
            android:title="Fitness"
            android:defaultValue="false"
            android:key="feature.fitness"
            android:summary="Enables Fitness Support"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_nodes_category"
        android:key="nodes"/>

    <PreferenceCategory
        android:title="@string/advanced_pref_category">
        <ListPreference
            android:title="@string/location_update_type"
            android:key="advanced.location.update"
            android:defaultValue="102"
            android:entries="@array/location_update_labels"
            android:entryValues="@array/location_update_types"/>
    </PreferenceCategory>
</PreferenceScreen>